test/bad/classes/method03.px

class Test def
    func f(Int b: 0) def
        skip

Test().f(a=3)
